# ArtSite.Frontend/Neospiration/src/services/interfaces/IMessageController.ts
@@ -14,9 +14,5 @@ export class ConversationNotFoundException extends MessageException {
 }
 
 export interface IMessageController {
-    getConversations(profileId: number): Promise<types.Conversation[]>;
-    getOrCreateConversation(profileId: number, otherProfileId: number): Promise<types.Conversation>;
-    getMessages(senderProfileId: number, receiverProfileId: number, limit?: number, offset?: number): Promise<types.Message[]>;
-    sendMessage(senderProfileId: number, receiverProfileId: number, text: string): Promise<types.Message>;
-    markAsRead(senderProfileId: number, receiverProfileId: number): Promise<void>;
+    getMessage(messageId: number): Promise<types.Message>;
 }
