# openapi.yaml
@@ -28,17 +28,17 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Art'
+                  $ref: '#/components/schemas/FullArtDtoCountable'
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Art'
+                  $ref: '#/components/schemas/FullArtDtoCountable'
             text/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Art'
+                  $ref: '#/components/schemas/FullArtDtoCountable'
   /api/arts/{artId}:
     get:
       tags:
@@ -56,13 +56,13 @@ paths:
           content:
             text/plain:
               schema:
-                $ref: '#/components/schemas/Art'
+                $ref: '#/components/schemas/FullArtDto'
             application/json:
               schema:
-                $ref: '#/components/schemas/Art'
+                $ref: '#/components/schemas/FullArtDto'
             text/json:
               schema:
-                $ref: '#/components/schemas/Art'
+                $ref: '#/components/schemas/FullArtDto'
         '404':
           description: Not Found
           content:
@@ -278,19 +278,13 @@ paths:
           content:
             text/plain:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Comment'
+                $ref: '#/components/schemas/CommentCountable'
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Comment'
+                $ref: '#/components/schemas/CommentCountable'
             text/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Comment'
+                $ref: '#/components/schemas/CommentCountable'
         '404':
           description: Not Found
           content:
@@ -327,6 +321,81 @@ paths:
       responses:
         '201':
           description: Created
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+  /api/arts/{artId}/like:
+    post:
+      tags:
+        - Art
+      parameters:
+        - name: artId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '201':
+          description: Created
+        '403':
+          description: Forbidden
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+    delete:
+      tags:
+        - Art
+      parameters:
+        - name: artId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '202':
+          description: Accepted
+        '403':
+          description: Forbidden
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
         '404':
           description: Not Found
           content:
@@ -730,7 +799,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetails'
   /api/pictures/{pictureId}/view:
-    post:
+    get:
       tags:
         - Picture
       parameters:
@@ -882,17 +951,17 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Art'
+                  $ref: '#/components/schemas/FullArtDto'
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Art'
+                  $ref: '#/components/schemas/FullArtDto'
             text/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Art'
+                  $ref: '#/components/schemas/FullArtDto'
         '404':
           description: Not Found
           content:
@@ -1519,6 +1588,46 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetails'
+  /api/profiles/search:
+    get:
+      tags:
+        - Profile
+      parameters:
+        - name: query
+          in: query
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            text/plain:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Profile'
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Profile'
+            text/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Profile'
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
   /api/subscriptions/{subscriptionId}:
     get:
       tags:
@@ -1545,6 +1654,78 @@ paths:
                 $ref: '#/components/schemas/Subscription'
         '401':
           description: Unauthorized
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+  /api/subscriptions/{id}:
+    delete:
+      tags:
+        - Subscription
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '201':
+          description: Created
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Subscription'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Subscription'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Subscription'
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '401':
+          description: Unauthorized
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '403':
+          description: Forbidden
           content:
             text/plain:
               schema:
@@ -2127,6 +2308,20 @@ components:
           type: string
           format: date-time
       additionalProperties: false
+    CommentCountable:
+      required:
+        - items
+      type: object
+      properties:
+        count:
+          type: integer
+          format: int32
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/Comment'
+          nullable: true
+      additionalProperties: false
     Commission:
       required:
         - description
@@ -2181,6 +2376,49 @@ components:
         profileId:
           type: integer
           format: int32
+      additionalProperties: false
+    FullArtDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        description:
+          type: string
+          nullable: true
+        uploadedAt:
+          type: string
+          format: date-time
+        profileId:
+          type: integer
+          format: int32
+        tierId:
+          type: integer
+          format: int32
+          nullable: true
+        isLiked:
+          type: boolean
+          nullable: true
+        likeCount:
+          type: integer
+          format: int32
+        commentCount:
+          type: integer
+          format: int32
+      additionalProperties: false
+    FullArtDtoCountable:
+      required:
+        - items
+      type: object
+      properties:
+        count:
+          type: integer
+          format: int32
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/FullArtDto'
+          nullable: true
       additionalProperties: false
     LoginDto:
       required:
@@ -2275,6 +2513,7 @@ components:
       additionalProperties: {}
     Profile:
       required:
+        - description
         - displayName
         - userId
       type: object
@@ -2291,6 +2530,9 @@ components:
         avatar:
           type: integer
           format: int32
+          nullable: true
+        description:
+          type: string
           nullable: true
       additionalProperties: false
     RegisterDto:
@@ -2395,10 +2637,14 @@ components:
       additionalProperties: false
     UpdateProfileDto:
       required:
+        - description
         - displayName
       type: object
       properties:
         displayName:
+          minLength: 1
+          type: string
+        description:
           minLength: 1
           type: string
       additionalProperties: false
